@@ -760,16 +760,6 @@ static constexpr std::string_view _musicStyles[] = {
     "rct2.music.pirate",
     "rct2.music.rock3",
     "rct2.music.candy",
-    "openrct2.music.galaxy",
-    "openrct2.music.acid",
-    "openrct2.music.dodgems",
-    "openrct2.music.blizzard",
-    "openrct2.music.extraterrestrial",
-    "openrct2.music.fairground2",
-    "openrct2.music.ragtime2",
-    "openrct2.music.prehistoric",
-    "openrct2.music.mystic",
-    "openrct2.music.rock4",
 };
 
 std::string_view GetStationIdentifierFromStyle(uint8_t style)
